CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-31 05:14:15
+lastsearch = 2024-07-31 14:47:25
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -48,8 +48,8 @@ url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
 match = -175.0%%
-title = 🔴Trực Tiếp | VIỆT NAM vs THÁI LAN |🏀 Chung kết bóng ...
-url = https://www.youtube.com/watch?v=ileoxQUx2Hc
+title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
+url = https://www.youtube.com/watch?v=_iGnRB4o7ng
 
 [saigontourist.edu.vn]
 match = -162.5%%
