--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-31 14:24:33
+lastsearch = 2024-07-31 14:56:56
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,14 +17,14 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -36.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -68.2%%
+title = Thảm trải sàn phòng khách cotton linen Nhật AJC002
+url = https://flexhouse.vn/tham-trai-san-phong-khach-cotton-linen-nhat-ajc002
 
 [ochino.com]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
-match = -36.4%%
-title = Showroom Thảm Sofa Giá Rẻ Tại Bình Dương
-url = https://decoviet.vn/tham-sofa-binh-duong/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [shopee.vn]
 match = -50.0%%
@@ -47,9 +47,9 @@ title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả .
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
-match = -122.7%%
-title = Đệm cao su chính hãng 100%% cao su thiên nhiên giá rẻ nhất!
-url = https://demxanh.com/dem-cao-su.html
+match = -86.4%%
+title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
 
 [www.kymdan.com]
 match = -18.2%%
@@ -57,9 +57,9 @@ title = Nệm (mattress) Kymdan Deluxe
 url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
 
 [drapgiuonghanquoc.com]
-match = 0.0%%
-title = Thảm - Drap giường, chăn ga gối ...
-url = https://drapgiuonghanquoc.com/danh-muc-san-pham/tham-rem/tham/
+match = -31.8%%
+title = Chăn Điện - Tấm Trải Điện - Thảm Điện
+url = https://drapgiuonghanquoc.com/san-pham/chan-dien-tam-trai-dien-tham-dien/
 
 [moho.com.vn]
 match = -72.7%%
