--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-31 13:54:38
+lastsearch = 2024-07-31 14:55:36
 
 [changagoidem.co]
 match = 8.3%%
@@ -34,7 +34,7 @@ url = https://sieuthimuare.com/bo-chan-ga-goi-phi-lua-chan-chan/
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOoosHs6YDpCR6Gp9UCGTc-fdYUOCmAXozQP0_r-Faag4kOucpCUz
 
 [diepxuan.com]
 match = 17.1%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [muathongminh.vn]
-match = -5.6%%
-title = Bộ ga giường Lụa Dream City cao cấp cho căn hộ đầy đủ ...
-url = https://muathongminh.vn/bo-ga-giuong-lua-dream-city-cao-cap-cho-can-ho-day-du-size-drap-phu-hoac-bo-chun-p.1__4682008640__50670826
+match = 9.1%%
+title = Bộ Chăn Ga Gối Phi Lụa
+url = https://muathongminh.vn/bo-chan-ga-goi-phi-lua.html
 
 [simplici7y.com]
 match = 0.0%%
