--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-31 14:17:30
+lastsearch = 2024-07-31 14:52:33
 
 [eva.vn]
 match = -163.2%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOoqmKqfcoNltTjSithUkoCPsSZMBykYCifGjKTv-qfbjM-HKg5Ag
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
 
 [mietistudio.com]
 match = -131.6%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -89.5%%
-title = 17 cây bóng mát khuyến khích trồng đường phố
-url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
+match = -68.4%%
+title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
+url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
 
 [nongthonviet.com.vn]
 match = -94.7%%
