--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-31 14:28:28
+lastsearch = 2024-07-31 15:00:23
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
 match = -128.6%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -100.0%%
-title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
-url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
+match = -52.4%%
+title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
+url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
 
 [www.roc-taiwan.org]
 match = -19.0%%
