--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-31 13:49:49
+lastsearch = 2024-07-31 14:50:50
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
 url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -42,19 +42,19 @@ title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
 url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
-match = 63.2%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+match = -20.0%%
+title = Chiếu nhựa ( đơn + gấp) Made in Viêt Nam
+url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.763563843670610&type=3
 
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html?srsltid=AfmBOopOB34dQeC9WMTDlrYX4qsthZBPtDtaZn6DzQTSlcPoMKBaSlaR
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOopSzJWeMdPvjuFs7Jzi7PUJwpzWpsIsshpk6GXsaYjieEjZJnjW
 
 [thuanloitrading.com]
 match = 10.0%%
@@ -79,7 +79,7 @@ url = http://chieuvietbac.blogspot.com/
 [www.hotdeal.vn]
 match = 50.0%%
 title = Chiếu Nhựa Cỡ Đại Hà Nội
-url = https://www.hotdeal.vn/ha-noi/do-dung-gia-dinh-nha-cua-doi-song/chieu-nhua-co-dai-49931.html
+url = https://www.hotdeal.vn/ha-noi/do-dung-gia-dinh-nha-cua-doi-song/chieu-nhua-co-dai-49931.html?srsltid=AfmBOopVBUdzdteXQDIo__yZNmSCmQw_NVwskaKwXzyvBjzIIxqtjRg_
 
 [denchieusangre.com]
 match = -10.0%%
@@ -95,4 +95,14 @@ url = https://m.facebook.com/media/set/?set=a.774846209209040.1073741830.7635638
 match = -100.0%%
 title = Plastic Check Valves | Van 1 Chiều Nhựa PVC-UPVC ...
 url = https://vindec.com.vn/van-1-chieu-nhua
+
+[www.labhanoi.com]
+match = -10.0%%
+title = khóa vời 3 chiều bằng nhựa PTFE
+url = https://www.labhanoi.com/pro.asp?pro=3934&khoa-voi-3-chieu-bang-nhua-ptfe.htm
+
+[muathongminh.vn]
+match = 82.4%%
+title = Chiếu Nhựa Hà Nội
+url = https://muathongminh.vn/chieu-nhua-ha-noi.html
 
