--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-31 04:17:37
+lastsearch = 2024-07-31 14:53:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -47,9 +47,9 @@ title = Người dân phấn khởi, vui mừng khi nhận lương hưu, trợ .
 url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap-bao-hiem-xa-hoi-theo-muc-moi-post817050.html
 
 [pctravinh.evnspc.vn]
-match = -104.8%%
-title = An toàn & tiết kiệm điện - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
+match = -90.5%%
+title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
 
 [baoapbac.vn]
 match = -47.6%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -100.0%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [baohungyen.vn]
 match = -4.8%%
