--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-31 10:54:29
+lastsearch = 2024-07-31 14:58:40
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -146.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -107.7%%
+title = Gani Lawal Jr. (@ganilawalspeaks)
+url = https://www.instagram.com/ganilawalspeaks/?hl=en
 
 [www.nebf.com]
 match = -50.0%%
@@ -118,8 +118,8 @@ url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/state
 
 [www.deutschconnectorstore.com]
 match = -253.8%%
-title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
-url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -630,4 +630,9 @@ url = https://dudeperfect.com/tour
 match = -292.3%%
 title = Port Authority of New York and New Jersey: We Keep the ...
 url = http://www.panynj.gov/
+
+[www.ebay.com]
+match = -253.8%%
+title = Jun Sakura manga Yugami-kun ni wa Tomodachi ga Inai ...
+url = https://www.ebay.com/itm/174963915388
 
