--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-31 12:52:19
+lastsearch = 2024-07-31 14:51:51
 
 [everonvn.com.vn]
 match = -55.6%%
 title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
-url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl
+url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl?srsltid=AfmBOor9LiqvZTgQ46mwlf9_qJ5dzirJSgi-KFtVKlFshWEFsqXx7VYy
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -111.1%%
+title = ♀Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami ...
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoqCPN-hQ-2zLAZ7CdvmR6Am-gNimj6V-_SHXtIIrEfYXw__zaNR
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,7 +34,7 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOor5IcsJALrUv00LKx0ROQxr0T6Ctpxv2-J3uNlRCa4s-yQ1G2aF
 
 [www.everonqb.com]
 match = -111.1%%
@@ -42,8 +42,8 @@ title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
 
 [shopee.vn]
-match = -127.8%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+match = -116.7%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
