--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-31 12:17:45
+lastsearch = 2024-07-31 15:24:34
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,14 +22,14 @@ title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
 url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 17.9%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = -28.6%%
+title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
+url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
 
 [flexhouse.vn]
 match = -17.9%%
