--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-31 13:20:42
+lastsearch = 2024-07-31 15:22:27
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -225.0%%
-title = Xin chào, Đại diện Obito và ekip, chúng tôi xin gửi tới các ...
-url = https://www.facebook.com/LovelyMimiFP/photos/nguyên-văn-xin-chào-đại-diện-obito-và-ekip-chúng-tôi-xin-gửi-tới-các-bạn-thông-t/1034333941815284/
+match = -125.0%%
+title = LỄ BỐC THĂM CHIA CẶP... - Cao Thủ Liên Quân
+url = https://www.facebook.com/story.php/?story_fbid=1021633259632655&id=100053579700031
 
 [baocaobang.vn]
 match = -218.8%%
@@ -367,9 +367,9 @@ title = Secured Home of gachkhongnungminhnhan.com
 url = https://gachkhongnungminhnhan.com/
 
 [congan.com.vn]
-match = -193.8%%
-title = Quốc lộ 1A ở cửa ngõ Tây Nam TPHCM: Quá tải và lạc hậu!
-url = https://congan.com.vn/giao-thong-24h/qua-tai-va-lac-hau_164763.html
+match = -181.2%%
+title = Người đàn ông chạy xe máy ngược chiều, còn dựng xe ...
+url = https://congan.com.vn/giao-thong-24h/nguoi-dan-ong-chay-xe-may-nguoc-chieu-con-dung-xe-truoc-dau-oto-gan-chuc-phut_165377.html
 
 [vnexpress.net]
 match = -68.8%%
