--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-31 10:20:47
+lastsearch = 2024-07-31 15:16:16
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -32,9 +32,9 @@ title = Nghi thức đọc tụng trên xe về chùa vào các ngày 14, 30 và
 url = https://phamthiyen.com/nghi-thuc-doc-tung-tren-xe-ve-chua-vao-cac-ngay-14-30-va-cac-ngay-ve-chua-lam-phan-su-c1687.html
 
 [langmai.org]
-match = -18.8%%
-title = Tụng 14 Giới Tiếp Hiện
-url = https://langmai.org/phat-duong/tung-gioi/tung-14-gioi-tiep-hien/
+match = 0.0%%
+title = Bài 14 – Quán buông bỏ
+url = https://langmai.org/thien-duong/sen-bup-tung-canh-he/bai-14-quan-chieu-buong-bo/
 
 [phaata.com]
 match = -118.8%%
@@ -209,7 +209,7 @@ url = https://vaas.vn/vi/giong/giong-lac-l14
 [www.vinaseed.com.vn]
 match = -56.2%%
 title = Hướng dẫn gieo trồng giống lạc L14
-url = https://www.vinaseed.com.vn/vi/news/m25/huong-dan-gieo-trong-giong-lac-l14-150.htm
+url = https://www.vinaseed.com.vn/vi/news/m35/huong-dan-gieo-trong-giong-lac-l14-150.htm
 
 [www.chieuduong.vn]
 match = -87.5%%
