--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-31 13:48:26
+lastsearch = 2024-07-31 15:15:57
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -57,9 +57,9 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -168.8%%
+title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
@@ -247,9 +247,9 @@ title = Thai máy ở vị trí nào? Hướng dẫn cách nhận biết và the
 url = https://tamanhhospital.vn/thai-may/
 
 [en.wikipedia.org]
-match = -6.2%%
-title = Religion in Vietnam
-url = https://en.wikipedia.org/wiki/Religion_in_Vietnam
+match = -243.8%%
+title = Viet Cong and People's Army of Vietnam use of terror in the ...
+url = https://en.wikipedia.org/wiki/Viet_Cong_and_People's_Army_of_Vietnam_use_of_terror_in_the_Vietnam_War
 
 [baoquangnam.vn]
 match = -200.0%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -131.2%%
-title = Cứu trợ - Chó Mèo lạc Tìm chủ Hà Nội | 16/5 Chiều
-url = https://m.facebook.com/groups/1216027058917461/posts/1800765410443620/
+match = -93.8%%
+title = XE 4,7,16 ĐÀ NẴNG HỘI AN SIÊU GIÁ RẺ
+url = https://m.facebook.com/groups/117462682137045/posts/1544412386108727/
 
 [thanhnien.vn]
 match = -187.5%%
@@ -665,4 +665,19 @@ url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 match = -218.8%%
 title = Một số giải pháp phòng ngừa với nhóm tội phạm XHTD đối ...
 url = https://congan.ninhbinh.gov.vn/mot-so-giai-phap-phong-ngua-voi-nhom-toi-pham-xhtd-doi-voi-nguoi-tu-du-13-den-duoi-16-tuoi
+
+[www.fact-link.com.vn]
+match = -168.8%%
+title = FACT-LINK : : Japan - Vietnam Industrial Directory
+url = https://www.fact-link.com.vn/contact_supplier.php?pid=31
+
+[www.yellowpages.com.vn]
+match = -43.8%%
+title = bridge bearing manufacturers
+url = https://www.yellowpages.com.vn/tagclass/40026360/bridge-bearing-manufacturers.html?page=2
+
+[shinhan.com.vn]
+match = -66.7%%
+title = promotion
+url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/AN KHANG - EN.pdf
 
