--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-31 04:47:42
+lastsearch = 2024-07-31 15:25:37
 
 [www.diepxuan.com]
 match = 60.6%%
 title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOooXQvAiH4W4iTSxi92DA5VX42z_LPw94VBHdY7pAEl7IxyQy_NR
 
 [shopee.vn]
 match = 9.1%%
@@ -97,9 +97,9 @@ title = Chieu Cave - All You Need to Know BEFORE You Go (2024)
 url = https://en.tripadvisor.com.hk/Attraction_Review-g1652592-d13161996-Reviews-or10-Chieu_Cave-Mai_Chau_Mai_Chau_District_Hoa_Binh_Province.html
 
 [thietbicaocapacm.com]
-match = -25.0%%
-title = thùng rác ngoài trời
-url = https://thietbicaocapacm.com/category/thung-rac-ngoai-troi
+match = 3.8%%
+title = thùng rác nhựa công nghiệp
+url = https://thietbicaocapacm.com/category/thung-rac-nhua-cong-nghiep
 
 [ximang.vn]
 match = 0.0%%
