--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-31 14:16:25
+lastsearch = 2024-07-31 15:23:51
 
 [www.galottery.com]
 match = -7.7%%
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -230.8%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -215.4%%
+title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=UBbUr4PkwO4
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
@@ -495,4 +495,9 @@ url = https://www.twmetals.com/resources/calculators.html
 match = -292.3%%
 title = General Assembly Adopts Resolution Calling for Immediate ...
 url = https://press.un.org/en/2023/ga12548.doc.htm
+
+[www.uscg.mil]
+match = -130.8%%
+title = United States Coast Guard > contact
+url = https://www.uscg.mil/contact/
 
