--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-31 13:29:30
+lastsearch = 2024-07-31 15:23:07
 
 [www.tiktok.com]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -200.0%%
-title = HOA guy fines a dude for having a broom out : r/TikTokCringe
-url = https://www.reddit.com/r/TikTokCringe/comments/1achag2/hoa_guy_fines_a_dude_for_having_a_broom_out/
+match = -223.5%%
+title = HOA tried to punish us - Told us to "Stop them if we can" - ...
+url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
 
 [music.apple.com]
 match = -194.1%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -229.4%%
-title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
-url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyV3AggSe&sig=ACfU3U0V1FpvMOwb9_jYv9jCjxR9oBbR6g&hl=en&sa=X&ved=2ahUKEwiC_Oa709CHAxW3FFkFHXjJBRoQ6AF6BAgaEAM
+match = -117.6%%
+title = Biographic Register of the Department of State
+url = https://books.google.com/books?id=jpTQOB_lClwC&pg=RA2-PA193&lpg=RA2-PA193&dq=man+in+hoa+dep+16&source=bl&ots=7O0GzC5C8M&sig=ACfU3U15MF5atszeOoqUuD1FML1szJMkeQ&hl=en&sa=X&ved=2ahUKEwjy09Hu7NCHAxXvD1kFHZUQM08Q6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
