--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-31 14:18:34
+lastsearch = 2024-07-31 15:22:07
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -22,8 +22,8 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2021-2022-app-data-by-school-q6.xls
 
 [medboard.nv.gov]
-match = -110.0%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -90.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.uclahealth.org]
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -20.0%%
+title = Cheryl Anderson - UCSD Profiles
+url = https://profiles.ucsd.edu/cheryl.anderson
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -5.0%%
-title = Frank McCormick, PhD, FRS
-url = https://profiles.ucsf.edu/frank.mccormick
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = 0.0%%
-title = Merrill E Gershwin
-url = https://profiles.ucdavis.edu/merrill.gershwin
+match = -38.5%%
+title = R Lor Randall
+url = https://profiles.ucdavis.edu/r.randall
 
 [store.samhsa.gov]
 match = -60.0%%
