CI images update

--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-31 09:48:52
+lastsearch = 2024-07-31 15:35:59
 
 [demxanh.com]
 match = 26.3%%
@@ -37,9 +37,9 @@ title = Hiệu quả mô hình chăn nuôi bò ở Trạm Ra đa 35
 url = https://phongkhongkhongquan.vn/26553/hieu-qua-mo-hinh-chan-nuoi-bo-o-tram-ra-da-35.html
 
 [tamanhhospital.vn]
-match = -108.7%%
-title = Siêu âm vú giúp chẩn đoán các bệnh lý tuyến vú, có chính ...
-url = https://tamanhhospital.vn/sieu-am-vu-nguc/
+match = -39.1%%
+title = Đo loãng xương (đo mật độ xương BMD) là gì?
+url = https://tamanhhospital.vn/do-mat-do-loang-xuong/
 
 [nguyendang.com.vn]
 match = -13.0%%
