--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-31 13:48:47
+lastsearch = 2024-07-31 15:33:33
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -165,4 +165,9 @@ url = http://muitaro.com/mui-taro-tay-yamawa-ht-m14x2-1-5p-p3.html
 match = -166.7%%
 title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 7, 2024
 url = https://tiki.vn/search?q=chiếu tre
+
+[hachi.com.vn]
+match = -173.3%%
+title = NHỮNG LƯU Ý VỀ ÁNH SÁNG ĐỐI VỚI CÂY TRỒNG - Hachi
+url = https://hachi.com.vn/nhung-luu-y-ve-anh-sang-doi-voi-cay-trong/
 
