--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-31 13:27:25
+lastsearch = 2024-07-31 15:45:38
 
 [www.youtube.com]
-match = -72.7%%
-title = Xóm vắng 16
-url = https://www.youtube.com/watch?v=XQmlxXAh7D0
+match = -88.0%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
 
 [www.voatiengviet.com]
 match = -92.0%%
@@ -397,9 +397,9 @@ title = Vụ 292 du khách bị bỏ rơi ở Phú Quốc: Công ty Đài Loan .
 url = https://kevevn.vn/20240218/vu-292-du-khach-bi-bo-roi-o-phu-quoc-cong-ty-dai-loan-tuyen-bo-pha-san-bi-to-lua-dao-28225754.html
 
 [vn.taiwantoday.tw]
-match = -64.0%%
-title = Đài Loan từng bước hoàn thiện hệ thống pháp luật về ...
-url = https://vn.taiwantoday.tw/news.php?unit=458,459,461,462&post=256023
+match = -60.0%%
+title = Bộ Ngoại giao dự kiến cấp hộ chiếu Đài Loan phiên bản ...
+url = https://vn.taiwantoday.tw/news.php?unit=458&post=184452
 
 [vietsuntravel.com]
 match = -4.0%%
@@ -427,7 +427,7 @@ title = https://m.sabomall.com/sitemap/category/phukiencongnghe/3
 url = https://sabomall.com/sitemap/category/phukiencongnghe/3
 
 [thanhnien.vn]
-match = -44.0%%
-title = Đài Loan: tin tức, hình ảnh, video, bình luận
-url = https://thanhnien.vn/dai-loan.html
+match = -64.0%%
+title = Đài Loan: tin tức, hình ảnh, video, bình luận mới nhất
+url = https://thanhnien.vn/dai-loan-tags491767.html
 
