--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -62,9 +62,9 @@ title = Di tích lịch sử Rạch gầm - Xoài mút
 url = https://svhttdl.tiengiang.gov.vn/di-tich-lich-su/-/asset_publisher/wxIoUS9QiA4e/content/di-tich-lich-su-rach-gam-xoai-mut
 
 [www.youtube.com]
-match = -237.5%%
-title = MBE vs CES (BO3) | GAM vs TF (BO3) | TW vs TS (BO3) | VCS ...
-url = https://www.youtube.com/watch?v=tXqDhoLY2SI
+match = -156.2%%
+title = GIÁ ĐÔ "NHẢY NHÓT" và CHỢ BẾN THÀNH CẦM CỰ CHỜ ...
+url = https://www.youtube.com/watch?v=ACbq4dSFPls
 
 [lienminhhtxhaiphong.org.vn]
 match = -25.0%%
@@ -132,9 +132,9 @@ title = đô thị tối cường chiến thần nettruyen|Casino Trực Tuyến
 url = https://tinchi.qnu.edu.vn/đô_thị_tối_cường_chiến_thần_nettruyen.xhtml
 
 [tuoitre.vn]
-match = -143.8%%
-title = Capsule Mini: Thú chơi xe kéo nhà di động mới nổi
-url = https://tuoitre.vn/capsule-mini-thu-choi-xe-keo-nha-di-dong-moi-noi-20240713194238217.htm
+match = -200.0%%
+title = Mặt đường cao tốc Phan Thiết - Dầu Giây có chỗ hỏng, ban ...
+url = https://tuoitre.vn/video/mat-duong-cao-toc-phan-thiet-dau-giay-co-cho-hong-ban-quan-ly-du-an-noi-gi-165059.htm
 
 [cafef.vn]
 match = -156.2%%
@@ -218,8 +218,8 @@ url = https://www.booking.com/city/de/redebas.vi.html
 
 [m.facebook.com]
 match = -206.2%%
-title = Miss... - Miss Grand Vietnam - Hoa Hậu Hòa Bình Việt Nam
-url = https://m.facebook.com/100064207387690/photos/914547064028865/
+title = Sancho và Erik ten Hag nói với nhau như cái máy thế này ...
+url = https://m.facebook.com/anhemunited/photos/sancho-và-erik-ten-hag-nói-với-nhau-như-cái-máy-thế-nàymà-báo-giới-dệt-gấm-thêu-/461684560078855/
 
 [antoanthanhpho.vn]
 match = -68.8%%
@@ -272,9 +272,9 @@ title = What are some swear words in Vietnamese?
 url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 
 [congan.com.vn]
-match = -218.8%%
-title = Va chạm với xe tải rồi ngã lọt gầm container, một người tử ...
-url = https://congan.com.vn/giao-thong-24h/va-cham-xe-tai-roi-nga-lot-gam-container-mot-nguoi-tu-vong_165243.html
+match = -212.5%%
+title = Nhanh chóng bắt giữ đối tượng xin đi nhờ xe rồi giết ân ...
+url = https://congan.com.vn/vu-an/nhanh-chong-bat-giu-doi-tuong-xin-di-nho-xe-roi-giet-an-nhan-cuop-tai-san_165372.html
 
 [canbangdongclc.com]
 match = -75.0%%
@@ -392,9 +392,9 @@ title = Ronaldo sắp làm phi vụ chuyển nhượng giật gân?
 url = https://giaoducthoidai.vn/ronaldo-sap-lam-phi-vu-chuyen-nhuong-giat-gan-post693177.html
 
 [imall.vn]
-match = -187.5%%
-title = Dưỡng đo đường kính lỗ (40.63mm) Niigata Seiki AA ...
-url = https://imall.vn/duong-do-duong-kinh-lo-40-63mm-niigata-seiki-aa-40-63mm
+match = -206.2%%
+title = Căn lá dày 0.12mm x dài 3m x rộng 12.7mm Niigata Seiki ...
+url = https://imall.vn/can-la-day-0-12mm-x-dai-3m-x-rong-12-7mm-niigata-seiki-k-fg-12-3
 
 [vi.wikipedia.org]
 match = -81.2%%
@@ -410,4 +410,19 @@ url = https://baobinhphuoc.com.vn/news/18/160659/cau-lac-bo-ha-noi-vo-dich-giai-
 match = -231.2%%
 title = Trao kinh phí hỗ trợ di dời chuồng trại ra khỏi gầm sàn nhà ...
 url = http://caobangtv.vn/tin-tuc-n75581/trao-kinh-phi-ho-tro-di-doi-chuong-trai-ra-khoi-gam-san-nha-o-tai-xa-phong-nam-trung-khanh.html
+
+[znews.vn]
+match = -50.0%%
+title = Di Maria hoảng sợ - Thể thao
+url = https://znews.vn/di-maria-hoang-so-post1489225.html
+
+[hanoimoi.vn]
+match = -143.8%%
+title = Thơm ngon kẹo truyền thống OCOP 3 sao Chiến Tấn
+url = https://hanoimoi.vn/thom-ngon-keo-truyen-thong-ocop-3-sao-chien-tan-673501.html
+
+[www.vaticannews.va]
+match = -106.2%%
+title = Tin Mừng và Lời Chúa ngày 16 tháng tám 2024
+url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/08/16.html
 
