--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-31 13:25:17
+lastsearch = 2024-07-31 15:44:34
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -235.7%%
+title = Siêu Nhân Người Nhện Đi Xe Ô Tô Trên Biển Cùng Siêu ...
+url = https://www.youtube.com/watch?v=Ut5lEui2K7k
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -83,8 +83,8 @@ url = https://shopee.vn/Miếng-dán-màn-hình-laptop-chống-tia-UV-ánh-sáng
 
 [www.dienmayxanh.com]
 match = -242.9%%
-title = Màn hình máy tính 23.8 inch chính hãng, giá rẻ, giao nhanh
-url = https://www.dienmayxanh.com/man-hinh-may-tinh-23-8-inch
+title = Màn hình máy tính PC uy tín chính hãng, giá rẻ | BH 3 năm
+url = https://www.dienmayxanh.com/man-hinh-may-tinh
 
 [thecoffeehouse.com]
 match = 28.6%%
@@ -332,9 +332,9 @@ title = Labatt USA: Welcome
 url = https://www.labattusa.com/
 
 [genk.vn]
-match = -257.1%%
-title = Ảnh hưởng từ 'màn hình xanh' của Microsoft ngày càng lan ...
-url = https://genk.vn/anh-huong-tu-man-hinh-xanh-cua-microsoft-ngay-cang-lan-rong-may-bay-buoc-phai-ha-canh-o-nhieu-noi-tren-the-gioi-2024071917113846.chn
+match = -250.0%%
+title = Xiaomi ra mắt "iPad mini giá rẻ": Màn hình 8.7 inch 90Hz ...
+url = https://genk.vn/xiaomi-ra-mat-ipad-mini-gia-re-man-hinh-87-inch-90hz-vua-van-2-sim-4g-ho-tro-ca-goi-dien-thoai-gia-33-trieu-dong-20240730135652106.chn
 
 [thegioiremcua.vn]
 match = -157.1%%
