--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -77,8 +77,8 @@ title = Sandra Oh (@iamsandraohinsta)
 url = https://www.instagram.com/iamsandraohinsta/?hl=en
 
 [medboard.nv.gov]
-match = -121.1%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -100.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.facesofsuicide.com]
