--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-31 13:34:20
+lastsearch = 2024-07-31 15:41:49
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -87.5%%
-title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
+match = -33.3%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
+url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
