--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-31 12:21:12
+lastsearch = 2024-07-31 15:43:53
 
 [shopee.vn]
-match = -41.7%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = -37.5%%
+title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
+url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
 
 [www.diepxuan.com]
 match = 100.0%%
