--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-31 14:56:16
+lastsearch = 2024-07-31 15:39:43
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOooKm3O86F6_vW8ziebeIEGpc80RjzCgo8eoiw5VI_DW3Pg45tj2
+url = https://ninhouse.vn/collections/ruot-goi-1
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorq-RNItZAWEWPH5sJsON8r-LAchWr96kogWg2GeYxJ2IYkQ65L
+url = https://demxanh.com/ruot-goi.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,12 +59,12 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOorihKr6IK53UIWVd3CgrN3ipUsdp-bq9GlEPA4HfNqQ-3ZYad9e
+url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOooEW0EwLsAoNq-hBDMIx1G3-7iea1o-WnLCkmgKbyBBEoTGpezn
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
