CI images update

--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-31 12:25:12
+lastsearch = 2024-07-31 15:49:15
 
 [www.facebook.com]
 match = -45.0%%
@@ -14,7 +14,7 @@ url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-côn
 [demxanh.com]
 match = -85.0%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOopBe6UWUGVlr8et93xrAJy6CdeQ_uRMX_SNx9XAZEgpQGOAbCTU
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
 match = -8.3%%
@@ -34,7 +34,7 @@ url = https://tchome.vn/bo-chan-ga-goi-pyeoda-c3438.html
 [thegioidemonline.com]
 match = -90.0%%
 title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOopqA3iYzEY7FXn9bz78VZVYepKtNClXPVRfaTwI_dx9pVUzdTFg
+url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [shopee.vn]
 match = -30.0%%
