--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-31 14:23:17
+lastsearch = 2024-07-31 15:53:07
 
 [demxanh.com]
 match = -42.9%%
@@ -12,8 +12,8 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+match = 28.6%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
 url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
