--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-31 02:50:16
+lastsearch = 2024-07-31 15:48:33
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -72.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
+match = -52.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -44.0%%
-title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga trải giường thắng lợi
+match = -64.0%%
+title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 4.0%%
-title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+match = -4.0%%
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [www.lazada.vn]
 match = 0.0%%
