CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-31 15:15:57
+lastsearch = 2024-07-31 16:21:11
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -672,9 +672,9 @@ title = FACT-LINK : : Japan - Vietnam Industrial Directory
 url = https://www.fact-link.com.vn/contact_supplier.php?pid=31
 
 [www.yellowpages.com.vn]
-match = -43.8%%
-title = bridge bearing manufacturers
-url = https://www.yellowpages.com.vn/tagclass/40026360/bridge-bearing-manufacturers.html?page=2
+match = -125.0%%
+title = Vietnam granite stone suppliers (366 result)
+url = https://www.yellowpages.com.vn/tagclass/40149110/vietnam-granite-stone-suppliers.html?page=13
 
 [shinhan.com.vn]
 match = -66.7%%
