--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-31 05:19:23
+lastsearch = 2024-07-31 16:22:15
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -410,4 +410,9 @@ url = https://www.gn.go.kr/entour/sub05_04_08.do
 match = -104.3%%
 title = South Korea says 19 citizens held captive in Myanmar ...
 url = https://www.reuters.com/world/asia-pacific/south-korea-says-19-citizens-held-captive-myanmar-rescued-2023-11-14/
+
+[m.facebook.com]
+match = -5.6%%
+title = Wallingford School
+url = https://m.facebook.com/wallingford4140/?locale=hu_HU
 
