--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-31 15:21:48
+lastsearch = 2024-07-31 16:25:23
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
+title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
+url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -285,4 +285,9 @@ url = https://dalieuthuhien.vn/68/94/ziaja-med-15-urea-cream-100ml-kem-mem-da-15
 match = -76.9%%
 title = công nghệ gen
 url = https://sti.vista.gov.vn/Pages/ket-qua-nghien-cuu-moi-nhat.aspx?datasearch=[{"FieldSearch":"Keyword_Chinh","Keyword":"công+nghệ+gen","Operator":"AND"}]&Type_CSDL=KETQUANHIEMVU
+
+[znews.vn]
+match = -25.0%%
+title = Cái tên nào thống trị rạp Việt tháng 8? - Giải trí
+url = https://znews.vn/cai-ten-nao-thong-tri-rap-viet-thang-8-post1489172.html
 
