--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-31 14:38:46
+lastsearch = 2024-07-31 16:27:06
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 14.3%%
-title = Hội Ăn Vặt Thuận Giao
-url = https://www.facebook.com/groups/351555799862066/posts/d41d8cd9/1033458921671747/
+match = -9.1%%
+title = 60 PHÚT COMBO FULLFACE
+url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
 
 [nhua66a.com]
 match = -17.9%%
@@ -107,8 +107,8 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -60.7%%
-title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
+match = -71.4%%
+title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
 url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
