--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-31 11:13:28
+lastsearch = 2024-07-31 16:27:29
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
 [vinatools.com]
 match = -200.0%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong cắt ...
-url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOopccwPAH4MlIfoTT8x4ACJbDgUyNrnmX1M6AFrSKguDeLJbJFfS
+url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
 match = -166.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -126.7%%
-title = Celadon Sports & Resort Club - Facebook
-url = https://www.facebook.com/CeladonSRC/photos/️chỉ-còn-2-buổi-tập-nữa-chương-trình-burn-it-up-mùa-2-sẽ-kết-thúcchương-trình-bu/3097734877138264/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
 
 [lacvietauction.vn]
 match = -80.0%%
