--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-31 15:30:51
+lastsearch = 2024-07-31 16:15:25
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -100.0%%
 title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html?srsltid=AfmBOorveWom84I2xtWmUJ238PECQci_eFSOLOuEh2rR-LsONl0mnaFx
+url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
 match = -80.0%%
