--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-31 15:22:07
+lastsearch = 2024-07-31 16:19:51
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -20.0%%
-title = Cheryl Anderson - UCSD Profiles
-url = https://profiles.ucsd.edu/cheryl.anderson
+match = -10.0%%
+title = Anders Dale - UCSD Profiles
+url = https://profiles.ucsd.edu/anders.dale
 
 [quicksearch.dla.mil]
 match = -185.7%%
