--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-31 14:47:46
+lastsearch = 2024-07-31 16:34:48
 
 [www.everonqb.com]
 match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm EPC19055 80x100
-url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
+title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
+url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -24,7 +24,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 [www.diepxuan.com]
 match = 43.5%%
 title = Điệp Xuân Vỏ gối ôm ES1715 80x100
-url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
+url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html?srsltid=AfmBOoppRUG_V99UuQ5YmbmrdvFj6zRs7f8WxjD8FKNySE0lHnU2h0km
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
