--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-31 15:21:24
+lastsearch = 2024-07-31 16:40:18
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmIHlqa&sig=ACfU3U33f1Lq7OytJqCG4ld1ccmY6kGn1g&hl=en&sa=X&ved=2ahUKEwicosC97NCHAxXsMVkFHXjlGX4Q6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgmILtjd&sig=ACfU3U1qjCgmPMMU4SCEsLanzYhrq6q6xg&hl=en&sa=X&ved=2ahUKEwiH59iO_tCHAxUVMlkFHUk7AfgQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
