--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-31 13:17:56
+lastsearch = 2024-07-31 16:47:38
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
@@ -122,7 +122,7 @@ title = Bộ Chăn Ga Gối Cotton 100%% Hàn Quốc In Hình Hoa Nhỏ ...
 url = https://lynconcept.com/bo-chan-ga-goi-cotton-100-han-quoc-in-hinh-hoa-nho-phoi-nen-mau-trang-xanh-ct16
 
 [elmichsleep.vn]
-match = -17.9%%
-title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
+match = -25.0%%
+title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
 url = https://elmichsleep.vn/chan-ga-goi
 
