--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-31 15:42:10
+lastsearch = 2024-07-31 16:55:28
 
 [hoa18.com]
-match = -173.7%%
-title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài lộc trong ...
-url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
+match = -50.0%%
+title = Về Hoa18
+url = https://hoa18.com/thong-tin/ve-hoa-18
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -152.6%%
+title = Hoa Mộc Hương ta nở bao lâu thì tàn - Khi nào lập lại hoa?
+url = https://www.youtube.com/watch?v=IL1ZIO7fIro
 
 [kallos.co]
 match = -105.3%%
@@ -57,9 +57,9 @@ title = TPHCM: Nhiều thủ tục hành chính sẽ đơn giản, dễ hiểu .
 url = https://thuvienphapluat.vn/chinh-sach-phap-luat-moi/vn/cuoc-chien-loai-bo-giay-phep-con/67093/nhieu-thu-tuc-hanh-chinh-se-don-gian-de-hieu-de-thuc-hien-tiet-kiem-thoi-gian-chi-phi-cong-suc
 
 [baomoi.com]
-match = -142.1%%
-title = Thực hiện Nghị quyết 98/2023/QH15: TP. Hồ Chí Minh với ...
-url = https://baomoi.com/thuc-hien-nghi-quyet-98-2023-qh15-tp-ho-chi-minh-voi-buoc-di-than-toc-vuot-moc-thoi-gian-c49429673.epi
+match = -163.2%%
+title = Olympic Paris 2024: Nguyễn Thùy Linh dừng bước đầy tiếc ...
+url = https://baomoi.com/olympic-paris-2024-nguyen-thuy-linh-dung-buoc-day-tiec-nuoi-c49778520.epi
 
 [www.tiktok.com]
 match = -73.7%%
@@ -280,4 +280,9 @@ url = https://www.evn.com.vn/d6/news/Ha-Giang-No-luc-dua-dien-luoi-quoc-gia-ve-c
 match = -152.6%%
 title = Toàn xã hội tham gia “Phát triển hệ tri thức Việt số ...
 url = https://www.mof.gov.vn/webcenter/portal/btcvn/pages_r/l/tin-bo-tai-chinh?dDocName=UCMTMP122779
+
+[baoangiang.com.vn]
+match = -168.4%%
+title = Nguyễn Thùy Linh thua tiếc nuối ở trận đấu quyết định tại ...
+url = https://baoangiang.com.vn/nguyen-thuy-linh-thua-tiec-nuoi-o-tran-dau-quyet-dinh-tai-olympic-paris-2024-a401570.html
 
