--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-31 15:25:37
+lastsearch = 2024-07-31 16:45:15
 
 [www.diepxuan.com]
 match = 60.6%%
 title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOooXQvAiH4W4iTSxi92DA5VX42z_LPw94VBHdY7pAEl7IxyQy_NR
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
 match = 9.1%%
