--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-31 15:35:16
+lastsearch = 2024-07-31 16:59:48
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -18,12 +18,12 @@ url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
 match = -22.6%%
-title = Ga chống thấm Hilton Cotton cao cấp CTHT01 | Khuyến mãi
-url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht01.html
+title = Ga chống thấm Hilton Cotton cao cấp CTHT04 | Khuyến mãi
+url = https://demxanh.com/ga-chong-tham-hilton-cotton-cao-cap-ctht04.html
 
 [dreamland.vn]
-match = -38.7%%
-title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
+match = -21.1%%
+title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
