--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 16:29:15
+lastsearch = 2024-07-31 16:56:11
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Attica Prison Footage
-url = https://www.tiktok.com/discover/attica-prison-footage
+match = -15.0%%
+title = Sterling Virginia Halal Food
+url = https://www.tiktok.com/discover/sterling-virginia-halal-food
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -357,9 +357,9 @@ title = Buy your video games cheaper for PC and consoles - Instant ...
 url = https://www.instant-gaming.com/en/
 
 [www.instagram.com]
-match = -35.0%%
-title = Fabiana Justus (@fabianajustus)
-url = https://www.instagram.com/fabianajustus/?hl=en
+match = -88.9%%
+title = Instagram
+url = https://www.instagram.com/flowgamestv/p/C-DYIkCgpCr/
 
 [hvg.hu]
 match = -28.6%%
