--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-31 16:59:03
+lastsearch = 2024-07-31 17:10:54
 
 [www.youtube.com]
 match = -72.7%%
@@ -430,4 +430,9 @@ url = https://sabomall.com/sitemap/category/phukiencongnghe/3
 match = -64.0%%
 title = Đài Loan: tin tức, hình ảnh, video, bình luận mới nhất
 url = https://thanhnien.vn/dai-loan-tags491767.html
+
+[travel.com.vn]
+match = -68.0%%
+title = Du lịch Đài Loan | Đặt Tour Đài Loan trọn gói giá ưu đãi ...
+url = https://travel.com.vn/du-lich-dai-loan.aspx
 
