--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-31 14:15:22
+lastsearch = 2024-07-31 17:25:57
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -114.3%%
-title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
-url = https://www.roc-taiwan.org/vn_vi/cat/9.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -215,4 +215,9 @@ url = https://noithatdaithanh.com.vn/ghe-xep-day-dai-loan-khung-sat-dai-thanh-gx
 match = -95.2%%
 title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://www.instagram.com/cgvcinemasvietnam/p/C4t4MP-BIW_/
+
+[thanhnien.vn]
+match = -100.0%%
+title = Đài Loan: tin tức, hình ảnh, video, bình luận mới nhất
+url = https://thanhnien.vn/dai-loan-tags491767.html
 
