--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-31 14:35:38
+lastsearch = 2024-07-31 17:21:08
 
 [shopee.vn]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
 url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
-match = 16.0%%
-title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
-url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
+match = -40.0%%
+title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
+url = https://manthutrang.com/
 
 [www.diepxuan.com]
 match = 100.0%%
