--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-31 16:47:19
+lastsearch = 2024-07-31 17:21:29
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -127,9 +127,9 @@ title = Its 🍓strawberry season! Ft strawberry sago #sago #dessert ...
 url = https://www.tiktok.com/@pete_eats/video/7242653470434807086
 
 [30rates.com]
-match = -39.1%%
-title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
-url = https://30rates.com/riot-stock
+match = -43.5%%
+title = USD TO KRW TODAY AND FORECAST TOMORROW, ...
+url = https://30rates.com/usd-to-krw-today-forecast-dollar-to-won
 
 [www.google.com]
 match = 0.0%%
