--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-31 14:58:21
+lastsearch = 2024-07-31 17:18:46
 
 [www.cms.gov]
 match = 4.5%%
@@ -292,9 +292,9 @@ title = Vendor Lookup | Doing Business
 url = https://www.talgov.com/doingbusiness/vendorlookup
 
 [www.usmcu.edu]
-match = 4.5%%
-title = United States Marine Corps
-url = https://www.usmcu.edu/Portals/218/VN Oral History Catalog.pdf
+match = -118.2%%
+title = U.S. Marines in Vietnam Fighting the North Vietnamese ...
+url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam Fighting the North Vietnamese 1967  PCN 19000309000.pdf
 
 [origin-www.gsa.gov]
 match = -185.7%%
@@ -614,7 +614,7 @@ url = https://www.vftt.org/threads/tripyramids-from-the-kanc-5-30-05.6808/
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Debarment
+url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [appropriations.house.gov]
 match = -109.1%%
