--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-31 13:45:00
+lastsearch = 2024-07-31 17:10:32
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOooNVOTdSoxadrdojn4XKIxvvlDFnT0RYpb1dR6VABqKJc8FuNio
 
 [everonthaiha.com]
 match = 35.3%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = 0.0%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+match = -37.5%%
+title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
+url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/?srsltid=AfmBOoqPoqvaSXzr97DeNqKIJ_EgXAtBM6Md_z9MFftAFMd9HGYGEvAH
 
 [www.everonvn.vn]
 match = -20.8%%
