--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-31 14:29:29
+lastsearch = 2024-07-31 17:27:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -79.2%%
-title = Mua thảm chùi trân,thảm lau chân lông mềm siêu hút hàng ...
-url = https://tiki.vn/tham-chui-trantham-lau-chan-long-mem-sieu-hut-hang-nhap-khau-cao-cap-2-co-mau-gi-xamtham-gi-to-50x80-p242108302.html?spid=242108309
+match = -41.7%%
+title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -12.5%%
-title = thảm lau chân chống trơn trượt kích thước 50x80
-url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
+match = -41.7%%
+title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
+url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -105,4 +105,9 @@ url = https://dienmaycholon.com/tivi/google-tivi-sony-4k-50-inch-kd50x80k
 match = 21.7%%
 title = Thảm 50x80cm chống trơn
 url = https://www.teamstar-praha.cz/vi/tham-milano-50x80cm/
+
+[myngheviet.vn]
+match = -25.0%%
+title = Tranh SM Tùng Hạc Diên Niên 50x80 MNV-TSM651-1
+url = https://myngheviet.vn/qua-tang-tranh-tung-hac-dien-nien/tranh-sm-tung-hac-dien-nien-50x80-mnv-tsm651-1-6758-myngheviet.vn/
 
