--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-31 16:29:54
+lastsearch = 2024-07-31 17:11:18
 
 [www.tui.co.uk]
 match = -86.7%%
@@ -22,9 +22,9 @@ title = Live TUI Airways Flight Status
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
-match = -20.0%%
-title = TUI Cruises 15 April 2026
-url = https://www.cruisetimetables.com/tuicruises-15apr2026.html
+match = -160.0%%
+title = Singapore Cruise Ship Schedule 15 February 2024
+url = https://www.cruisetimetables.com/singaporeschedule-15feb2024.html
 
 [www.partstown.com]
 match = -73.3%%
