CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-31 15:23:51
+lastsearch = 2024-07-31 17:42:30
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxYy3_G_&sig=ACfU3U0WT5FRxChwhjej-zsI5wxB9Wc4yA&hl=en&sa=X&ved=2ahUKEwj4y5n63dCHAxUuk4kEHUBfApAQ6AF6BAgeEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxYz52DV&sig=ACfU3U2iMJlGZn_2m5hJo_i5k_ZoI0cE4w&hl=en&sa=X&ved=2ahUKEwjzsKqCjNGHAxUrrYkEHQXBJPgQ6AF6BAg0EAM
 
 [ottawabraves.com]
 match = -292.3%%
