--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-31 14:59:43
+lastsearch = 2024-07-31 17:33:50
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 17.4%%
-title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOoplF-uKuGKKE5QHPczxsrRM5U-MsNJ23I-bnxtZ3SDtYC_6esRy
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoq9ZAR0Cda71B3B-4aaefiqC-m3py0O5HDsyMn-ZoM_Q3FSp0mj
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
 match = -78.3%%
