--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 13:36:23
+lastsearch = 2024-07-31 17:31:44
 
 [www.zillow.com]
 match = -69.2%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -53.8%%
-title = Jacq Gani (@gainswithjacq)
-url = https://www.instagram.com/gainswithjacq/?hl=en
+match = -61.5%%
+title = NEETI MOHAN (@neetimohan18)
+url = https://www.instagram.com/neetimohan18/?hl=en
 
 [www.mariettaga.gov]
 match = -84.6%%
