--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-31 16:21:30
+lastsearch = 2024-07-31 17:39:42
 
 [www.tiktok.com]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -200.0%%
-title = HOA guy fines a dude for having a broom out : r/TikTokCringe
-url = https://www.reddit.com/r/TikTokCringe/comments/1achag2/hoa_guy_fines_a_dude_for_having_a_broom_out/
+match = -223.5%%
+title = HOA tried to punish us - Told us to "Stop them if we can" - ...
+url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
 
 [music.apple.com]
 match = -194.1%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -117.6%%
-title = Biographic Register of the Department of State
-url = https://books.google.com/books?id=jpTQOB_lClwC&pg=RA2-PA193&lpg=RA2-PA193&dq=man+in+hoa+dep+16&source=bl&ots=7O0GzC5C8M&sig=ACfU3U15MF5atszeOoqUuD1FML1szJMkeQ&hl=en&sa=X&ved=2ahUKEwjy09Hu7NCHAxXvD1kFHZUQM08Q6AF6BAgaEAM
+match = -182.4%%
+title = Dictionary of Geography - Page 907 - Google Books Result
+url = https://books.google.com/books?id=GfZNAAAAcAAJ&pg=PA907&lpg=PA907&dq=man+in+hoa+dep+16&source=bl&ots=hZPWwPa6UN&sig=ACfU3U2rR-BryCZyKpU-GX0H6GMQOJdOIw&hl=en&sa=X&ved=2ahUKEwjEt_-xi9GHAxXekYkEHU5rFhMQ6AF6BAgiEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -615,4 +615,9 @@ url = https://angelikalijoerg.de/1480604-tập-10-coô-xinh-đẹp-gái.html
 match = -52.9%%
 title = đẹp Có Xinh Bộ Phim Trai Những Gái
 url = https://kristin-gildemeister.de/9191021-gái-bộ-trai-những-xinh-đẹp-phim-có.html
+
+[www.condocontrol.com]
+match = 0.0%%
+title = 
+url = https://www.condocontrol.com/blog/how-to-find-hoa-rules/
 
