--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-31 15:19:22
+lastsearch = 2024-07-31 17:40:05
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCraEwtl&sig=ACfU3U1IqgO_mQbbWrFy_u8ccu4VxNNafw&hl=en&sa=X&ved=2ahUKEwjM2vnS6c-HAxXYMVkFHU99KG4Q6AF6BAg6EAM
+match = -142.9%%
+title = The queen's printers' aids to the student of the holy Bible. ...
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDD2xjssB&sig=ACfU3U3Wiz-kCe_RCsrlYADNXhoKl9p_KQ&hl=en&sa=X&ved=2ahUKEwjn2JC9i9GHAxUPENAFHX-4A8cQ6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = Record Demand in South Australia & Victoria 28 to 31 ...
-url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
+title = NEM Reform Electricity Wholesale Consultative Forum ( ...
+url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
 
 [www.nitrc.org]
 match = -21.4%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -95.2%%
+title = NEM Dubrovnik 2023, Day 2: record number of decision ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10170
 
 [yro.slashdot.org]
 match = -114.3%%
@@ -267,8 +267,8 @@ title = Evolving "nofollow" – new ways to identify the nature of links
 url = https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify
 
 [www.tiktok.com]
-match = -119.0%%
-title = Nem Nướng can be super eazy to make at home using store ...
+match = 0.0%%
+title = 
 url = https://www.tiktok.com/@nolimitcooking/video/7166486631006965034?lang=en
 
 [www.inquirer.com]
