--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -27,9 +27,9 @@ title = Ruột Gối Everon Các Loại, Giá Bán Rẻ Nhất Tại Hà Nội
 url = https://everonhanquoc.vn/1024/ruot-goi-everon
 
 [changagoidemsonghong.online]
-match = 42.9%%
-title = Ruột gối Sông Hồng
-url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
+match = -100.0%%
+title = Ruột gối đầu Sông Hồng giá rẻ tại Hà Nội
+url = https://changagoidemsonghong.online/ruot-goi-dau-song-hong.html
 
 [demxanh.com]
 match = -150.0%%
