--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-31 15:28:45
+lastsearch = 2024-07-31 17:27:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -104,7 +104,7 @@ url = https://www.dol.gov/agencies/ofccp/debarred-list
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Debarment
+url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [www.johnknoop.com]
 match = 5.6%%
@@ -167,9 +167,9 @@ title = La souris noire morlaix [thVqRd]
 url = https://www.nitrc.org/links/?group_id=51&url=https://9215487.xn--h1aakbimdbl.xn--p1ai/5428367u6fe43a
 
 [www.ncbi.nlm.nih.gov]
-match = 9.1%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -113.6%%
+title = Molecular Biology of Lung Cancer: Clinical Implications
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
 
 [www.gsa.gov]
 match = -185.7%%
@@ -277,9 +277,9 @@ title = Service Directory (by State) - Optometry
 url = https://www.va.gov/optometry/service_directory_by_state.asp
 
 [www.usmcu.edu]
-match = 4.5%%
-title = United States Marine Corps
-url = https://www.usmcu.edu/Portals/218/VN Oral History Catalog.pdf
+match = -118.2%%
+title = U.S. Marines in Vietnam Fighting the North Vietnamese ...
+url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam Fighting the North Vietnamese 1967  PCN 19000309000.pdf
 
 [huggingface.co]
 match = -133.3%%
