--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-31 16:23:16
+lastsearch = 2024-07-31 17:40:26
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -75.0%%
+title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn ...
+url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
-match = -66.7%%
-title = Sét 4 Thảm Chùi Chân Họa Tiết 3d Có Đáy Chống Trơn ...
-url = https://tiki.vn/set-4-tham-chui-chan-hoa-tiet-3d-co-da-y-chong-tron-kich-thuo-c-40x60-cm-p177904844.html?spid=177904844
+match = -54.2%%
+title = Thảm lau chân, siêu thấm cao cấp room mat 40x60 ( Đồ ...
+url = https://tiki.vn/tham-lau-chan-sieu-tham-cao-cap-room-mat-40x60-do-gia-dung-nhu-y-p181147569.html
 
 [www.thamminhquang.vn]
 match = 33.3%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-dng/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
+url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359?srsltid=AfmBOooiomMP4m0ElivYneOzSFK6xg3EvLY16Gr4ltKGVsdtB4XQTfC_
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -33.3%%
 title = Thảm Bàn chân len mịn thấm hút tốt size 40*60cm. ĐTVM
-url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html
+url = https://www.lazada.vn/products/tham-ban-chan-len-min-tham-hut-tot-size-4060cm-dtvm-i2005592715.html?srsltid=AfmBOorFnQZY2EQqkvpSGOQtxVUhbLi_J0AxC4u_dmOy8t0mJ36-VWDh
 
 [megahomevietnam.com]
 match = 20.0%%
