--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-31 16:51:49
+lastsearch = 2024-07-31 17:43:56
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -15.0%%
+title = Matthew Cooperberg, MD, MPH
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q5.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+match = -145.0%%
+title = Secretion of immunoregulatory cytokines by mesenchymal ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4178255/
 
 [www.energy.gov]
 match = -95.0%%
@@ -102,9 +102,9 @@ title = SAN DIEGO COUNTY TREASURER- ...
 url = https://www.sdttc.com/content/dam/ttc/docs/taxcollection/returned-tax-bills.pdf
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Stanley F Nelson
-url = https://profiles.ucla.edu/stanley.nelson
+match = -46.2%%
+title = Jerome Rotter
+url = https://profiles.ucla.edu/jerome.rotter
 
 [biodora-gardens.my-free.website]
 match = -130.0%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Jack Gilbert
-url = https://profiles.ucsd.edu/jack.gilbert
+match = -11.8%%
+title = Pieter Dorrestein
+url = https://profiles.ucsd.edu/pieter.dorrestein
 
 [profiles.ucdavis.edu]
 match = 0.0%%
