CI images update

--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-31 17:23:09
+lastsearch = 2024-07-31 17:49:23
 
 [chieutruc.info]
 match = -73.9%%
@@ -17,14 +17,14 @@ title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
 url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
-match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
-url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [www.lazada.vn]
 match = 21.7%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOoqdMqVSxbq7BElNF0nErncNVFweHQoVFgMt1XmupWAD513Jlq0i
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
@@ -57,9 +57,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [khodem.vn]
-match = -39.1%%
-title = MUA CHIẾU TRÚC CAO BẰNG Ở ĐÂU TẠI HÀ NỘI - Kho đệm
-url = https://khodem.vn/mua-chieu-truc-cao-bang-o-dau-tai-ha-noi/
+match = -56.5%%
+title = Chiếu trúc cây Cao Bằng Chiếu Việt Nam tốt nhất - Kho đệm
+url = https://khodem.vn/chieu-truc-cay-cao-bang/
 
 [thegioichieutruc.com]
 match = 0.0%%
