--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-31 13:49:27
+lastsearch = 2024-07-31 17:48:00
 
 [tiki.vn]
 match = -47.6%%
@@ -12,14 +12,14 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -85.7%%
-title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
-url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
+match = -61.9%%
+title = CÔNG TY XUẤT KHẨU LAO ĐỘNG NHÂN ĐẠT-Kesa. ...
+url = https://www.facebook.com/xkld0987841938/posts/gấp-gấp-gấp-điện-tử-chiếu-mẫn-đào-viên-đài-bắc-cần-nhận-thêm-form-nam-chỉ-nhận-l/1717940138441061/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -275,4 +275,9 @@ url = https://sashepherdcollege.co.za/86345612-phimsec-đaì-loan.html
 match = -90.5%%
 title = Bão Gaemi quét qua Đài Loan (Trung Quốc), hơn 200 ...
 url = https://baotainguyenmoitruong.vn/bao-gaemi-quet-qua-dai-loan-trung-quoc-hon-200-nguoi-bi-thuong-377243.html
+
+[www.cuatudongthuanphat.com]
+match = -100.0%%
+title = Cửa trượt tự động Đài Loan KTH-H18 trọng lượng 900-1000Kg
+url = https://www.cuatudongthuanphat.com/san-pham/cua-truot-tu-dong-dai-loan-kth-h18-trong-luong-900-1000kg-38.html
 
