--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-31 16:44:54
+lastsearch = 2024-07-31 17:50:46
 
 [vinatools.com]
 match = -140.0%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -233.3%%
+title = Ngày mai 7/3 chi nhánh 16 (73 Nguyễn... - Ways Station ...
+url = https://www.facebook.com/waysstation/posts/ngày-mai-73-chi-nhánh-16-73-nguyễn-văn-lạc-bình-thạnh-chính-thức-hoạt-động-lại-n/1220849978345623/
 
 [banhang.shopee.vn]
 match = -66.7%%
