--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-31 14:27:02
+lastsearch = 2024-07-31 17:57:42
 
 [dongagroup.vn]
 match = -272.7%%
@@ -57,9 +57,9 @@ title = Combo giường tủ 2m
 url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 
 [ifurni.vn]
-match = 0.0%%
-title = Giường bọc nệm HELEN 2
-url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
+match = -18.2%%
+title = Giường bọc nệm JULIANA 2
+url = https://ifurni.vn/san-pham/giuong-boc-nem-juliana-2-2433.html
 
 [shopee.vn]
 match = -263.6%%
@@ -93,8 +93,8 @@ url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
 match = -272.7%%
-title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
+title = Có bán Giường & lều tắm nắng tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/tanning-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -227.3%%
-title = Country Inn & Suites by Radisson, Eagan, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-eagan.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
