--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-31 14:48:48
+lastsearch = 2024-07-31 17:46:20
 
 [www.bible.com]
-match = -64.7%%
-title = Matyu 20 | TPIPNG Bible | YouVersion
-url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -210,4 +210,9 @@ url = https://www.nothingbundtcakes.com/
 match = -82.4%%
 title = Events Calendar - Stanford University
 url = https://events.stanford.edu/
+
+[muachunghaiphong.com]
+match = 0.0%%
+title = Màn chụp tự bung Zozo hoa 2x2,2m
+url = https://muachunghaiphong.com/Do-da-dung/Man-chup-tu-bung-Zozo-hoa-2x2-2m.html
 
