--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-31 17:18:46
+lastsearch = 2024-07-31 17:44:36
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -118.2%%
-title = Protein acylation: mechanisms, biological functions and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
+match = 9.1%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -655,4 +655,9 @@ url = https://research.sdsu.edu/sdsu_student_symposium/2024_s3_program_final.pdf
 match = -77.3%%
 title = CIVIL ENGINEERS LICENSES ISSUED PRIOR TO 1/1/82
 url = https://bpelsg.ca.gov/pubs/num_eng_82.pdf
+
+[pw.lacounty.gov]
+match = 13.6%%
+title = Los Angeles Valley Area
+url = https://pw.lacounty.gov/dsg/DisasterRoutes/map/Los Angeles Valley Area.pdf
 
