--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-31 10:46:26
+lastsearch = 2024-07-31 17:49:44
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/flight/flying-with-us/our-fleet
 
 [cruisepanda.com]
 match = -213.3%%
