--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-31 16:30:55
+lastsearch = 2024-07-31 17:53:48
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -33.3%%
-title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -39,7 +39,7 @@ url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a1279
 [shopee.vn]
 match = -22.2%%
 title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/
 
 [demxanh.com]
 match = -44.4%%
@@ -227,9 +227,9 @@ title = Bộ drap giường vỏ gối và bộ chăn ga hàn quốc Tết
 url = http://www.changabluetoday.com/bai-viet/bo-drap-giuong-vo-goi-va-bo-chan-ga-han-quoc-tet/248/
 
 [khodem.vn]
-match = -3.7%%
-title = Bộ chăn ga gối kẻ trắng khách sạn - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-ke-trang-khach-san/
+match = -14.8%%
+title = Bộ chăn ga gối lụa Pyeoda Silk Sky - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-lua-pyeoda-silk-sky/
 
 [freedomforvietnam.wordpress.com]
 match = -29.6%%
