CI images update

--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-31 10:31:27
+lastsearch = 2024-07-31 18:34:29
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -185.7%%
-title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
-url = https://www.youtube.com/watch?v=3ycihnhaARo
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
 match = -92.9%%
@@ -222,9 +222,9 @@ title = The Tenth Man Rule - Principle Explained
 url = https://insightbeforeaction.com/the-tenth-man-rule-principle-explained/
 
 [www.quora.com]
-match = -178.6%%
-title = Do the Israelis really have a 10th man doctrine?
-url = https://www.quora.com/World-War-Z-2013-movie-Do-the-Israelis-really-have-a-10th-man-doctrine
+match = -135.7%%
+title = What are some swear words in Vietnamese?
+url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 
 [atlasorganization.com]
 match = 0.0%%
