--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-31 16:33:03
+lastsearch = 2024-07-31 18:27:54
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -52.4%%
-title = Chiếu trúc giá rẻ có viền cao cấp loại tốt size 1m4
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-gia-re-co-vien-cao-cap-loai-tot-size-1m4/
+match = -76.2%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = 47.6%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -23.8%%
+title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
+url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
 
 [www.lazada.vn]
 match = -66.7%%
