--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-31 15:44:34
+lastsearch = 2024-07-31 18:27:33
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
 
 [www.youtube.com]
-match = -235.7%%
-title = Siêu Nhân Người Nhện Đi Xe Ô Tô Trên Biển Cùng Siêu ...
-url = https://www.youtube.com/watch?v=Ut5lEui2K7k
+match = -242.9%%
+title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
+url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
 
 [www.gadgets360.com]
 match = 0.0%%
