--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-31 10:40:14
+lastsearch = 2024-07-31 18:25:04
 
 [shopee.vn]
 match = -171.4%%
@@ -42,9 +42,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [www.bible.com]
-match = -171.4%%
-title = TIRHKOHTE 18 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/ACT.18.MIZCLBSI
+match = -128.6%%
+title = LUKA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
@@ -107,9 +107,9 @@ title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
 url = https://www.facebook.com/groups/manchuptubung/
 
 [www.churchofjesuschrist.org]
-match = -35.7%%
-title = Doktrin na ol Kavanen 89
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
+match = -28.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -130,4 +130,9 @@ url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
 match = -135.7%%
 title = Nothing Bundt Cakes: Delicious Bundt Cakes
 url = https://www.nothingbundtcakes.com/
+
+[www.tiktok.com]
+match = -278.6%%
+title = Eira Azieraa (@eiraaziera6699)’s videos with Rindu Ayah ...
+url = https://www.tiktok.com/@eiraaziera6699/video/7397729143904931079
 
