--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-07-31 13:23:09
+lastsearch = 2024-07-31 18:31:01
 
 [thefelix.vn]
-match = -50.0%%
-title = Nệm Cao Su Felix
-url = https://thefelix.vn/collections/nem-cao-su-felix
+match = -2.6%%
+title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
+url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
 
 [nemkhanganh.com]
 match = 47.4%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 31.6%%
-title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
-url = https://www.facebook.com/thefelix.vn/
+match = 13.3%%
+title = Felix - Nệm cao su thiên nhiên
+url = https://www.facebook.com/photo.php?fbid=722111676746654&id=100068434838834&set=a.413784520912706
 
 [bsa.org.vn]
 match = 57.1%%
@@ -130,4 +130,9 @@ url = https://www.sieuthinem.vn/nem-cao-su-chinh-hang.html
 match = 57.1%%
 title = NỆM CAO SU THIÊN NHIÊN FELIX
 url = https://bsaonline.vn/nem-cao-su-thien-nhien-felix/
+
+[ninhouse.vn]
+match = 15.8%%
+title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
+url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
