--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-31 16:45:35
+lastsearch = 2024-07-31 18:33:06
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 45.5%%
+title = Thảm giường II 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
 match = -22.7%%
