CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-31 16:55:28
+lastsearch = 2024-07-31 19:28:05
 
 [hoa18.com]
-match = -50.0%%
-title = Về Hoa18
-url = https://hoa18.com/thong-tin/ve-hoa-18
+match = -84.2%%
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -152.6%%
-title = Hoa Mộc Hương ta nở bao lâu thì tàn - Khi nào lập lại hoa?
-url = https://www.youtube.com/watch?v=IL1ZIO7fIro
+match = -147.4%%
+title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
+url = https://www.youtube.com/watch?v=NPdIFgtFTso
 
 [kallos.co]
 match = -105.3%%
@@ -102,9 +102,9 @@ title = Giá vàng giảm mạnh, mất mốc 71 triệu đồng/lượng
 url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/209883/gia-vang-giam-manh-mat-moc-71-trieu-dongluong?page=115
 
 [nongnghiep.vn]
-match = -152.6%%
-title = Bưu điện Việt Nam ra mắt bộ tem Bảo vật quốc gia về đồ ...
-url = https://nongnghiep.vn/buu-dien-viet-nam-ra-mat-bo-tem-bao-vat-quoc-gia-ve-do-gom-d394415.html
+match = -121.1%%
+title = Trùng tu Chùa Cầu và chiều sâu văn hóa của người Hội An
+url = https://nongnghiep.vn/trung-tu-chua-cau-va-chieu-sau-van-hoa-cua-nguoi-hoi-an-d394764.html
 
 [vietjack.com]
 match = -131.6%%
