--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-31 19:00:35
+lastsearch = 2024-07-31 19:40:28
 
 [shopee.vn]
 match = -171.4%%
@@ -107,9 +107,9 @@ title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
 url = https://www.facebook.com/groups/manchuptubung/
 
 [www.churchofjesuschrist.org]
-match = -28.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -271.4%%
+title = 1 Nifai 7 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/7?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -127,12 +127,17 @@ title = The Ultimate Guide To New Zealand Slang
 url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
 
 [www.nothingbundtcakes.com]
-match = -135.7%%
-title = Nothing Bundt Cakes: Delicious Bundt Cakes
-url = https://www.nothingbundtcakes.com/
+match = 0.0%%
+title = 
+url = https://www.nothingbundtcakes.com/find-a-bakery/
 
 [www.tiktok.com]
 match = -278.6%%
 title = Eira Azieraa (@eiraaziera6699)’s videos with Rindu Ayah ...
 url = https://www.tiktok.com/@eiraaziera6699/video/7397729143904931079
+
+[en.wikipedia.org]
+match = -14.3%%
+title = Emperor Gaozu of Han
+url = https://en.wikipedia.org/wiki/Emperor_Gaozu_of_Han
 
