--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-31 18:15:48
+lastsearch = 2024-07-31 19:35:02
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -61.9%%
-title = CÔNG TY XUẤT KHẨU LAO ĐỘNG NHÂN ĐẠT-Kesa. ...
-url = https://www.facebook.com/xkld0987841938/posts/gấp-gấp-gấp-điện-tử-chiếu-mẫn-đào-viên-đài-bắc-cần-nhận-thêm-form-nam-chỉ-nhận-l/1717940138441061/
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOopi0R1yS7gCNObUCHzkBADeB_VxWTuolIOBTFO0vBmEO_FQD8pu
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
