--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-31 18:53:55
+lastsearch = 2024-07-31 19:39:46
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -136.4%%
-title = Review: Speedland GS:TAM Trail Shoe
-url = https://ultrarunning.com/features/reviews/review-speedland-gstam-trail-shoe/
+match = -63.6%%
+title = Ultra Running Calendar
+url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
 
 [www.quora.com]
 match = -145.5%%
@@ -244,7 +244,7 @@ url = http://ruina.tam.cornell.edu/research/topics/bicycle_mechanics/stablebicyc
 [kingsofa.vn]
 match = -236.4%%
 title = Thảm Trải Sàn Lông Ngắn KS-LN-TS0003 - King Sofa
-url = https://kingsofa.vn/tham-trai-san-long-ngan-ks-ln-ts0003/
+url = https://kingsofa.vn/tham-trai-san-long-ngan-ks-ln-ts0003/?srsltid=AfmBOoockXmgY4GB6w1Lh3Fi6Yfq29q3cfTWhutJZCcRrQsZMD7ehe0Z
 
 [www.cgca.gov.in]
 match = -90.9%%
