--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-31 14:45:22
+lastsearch = 2024-07-31 19:27:01
 
 [erado.vn]
 match = 0.0%%
@@ -132,9 +132,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -135.0%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em?srsltid=AfmBOoo-8IQXKFrayos3pYaiOLaTWK9go00UiFHkq9yTUNk9dgSiBNvR
+match = -115.0%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [sofahome.vn]
 match = 25.0%%
