--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-31 16:49:46
+lastsearch = 2024-07-31 19:25:18
 
 [bilystore.vn]
 match = -81.0%%
@@ -12,9 +12,9 @@ title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
-match = -95.2%%
-title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
