--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-31 17:49:44
+lastsearch = 2024-07-31 19:30:31
 
 [www.tui.co.uk]
-match = 0.0%%
-title = 
-url = https://www.tui.co.uk/flight/flying-with-us/our-fleet
+match = 6.7%%
+title = Flight Timetable
+url = https://www.tui.co.uk/flight/timetable
 
 [cruisepanda.com]
 match = -213.3%%
