CI images update

--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-31 16:24:40
+lastsearch = 2024-07-31 20:03:48
 
 [xoptraisan.info]
 match = -147.4%%
@@ -12,9 +12,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
 match = 26.3%%
@@ -22,9 +22,9 @@ title = Thảm xốp hoạt hình 60 x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
-match = 52.6%%
-title = Thảm xốp hoạt hình 60x60
-url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
+match = 36.8%%
+title = Thảm xốp – THAMHT.VN
+url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
 match = -94.7%%
