--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-31 06:51:29
+lastsearch = 2024-07-31 20:02:26
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Buy South Korean won
 url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -216.7%%
-title = TUI AG says will not make offer for TUI Travel
-url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
+match = -258.3%%
+title = TUI shares turn negative ahead of savings decisions
+url = https://www.reuters.com/article/world/tui-shares-turn-negative-ahead-of-savings-decisions-idUSL14490949/
 
 [www.mybaggage.com]
 match = -116.7%%
