--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-31 16:27:06
+lastsearch = 2024-07-31 20:06:14
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = -9.1%%
-title = 60 PHÚT COMBO FULLFACE
-url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
+match = -39.3%%
+title = Cây cầu treo dài nhất Đài Loan ở Đào... - Vòng quanh ...
+url = https://www.facebook.com/aroundtwn/posts/cây-cầu-treo-dài-nhất-đài-loan-ở-đào-viên-với-chiều-dài-lên-đến-303-m-rộng-12-m-/2009859765784843/
 
 [nhua66a.com]
 match = -17.9%%
@@ -52,9 +52,9 @@ title = tai game danh bai dau truong
 url = https://dtcp.ap.gov.in/games/2024-02-01-th2vsoi cầu xổ số miền bắc 666.htm
 
 [shopee.vn]
-match = 45.5%%
-title = chiếu Đài Loan loại to
-url = https://shopee.vn/chiếu-Đài-Loan-loại-to-i.29182162.389909153
+match = -17.9%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [sv.kthcm.edu.vn]
 match = -39.3%%
@@ -270,4 +270,9 @@ url = https://muce.edu.vn/android/game-di-tam-bien/
 match = -109.1%%
 title = HO Gikaigic
 url = https://laichau.gov.vn/upload/2000066/fck/files/10(2).pdf
+
+[quangminhhung.com]
+match = -14.3%%
+title = CÂY CHỐNG CHẤT LƯỢNG CAO NHẬP KHẨU TỪ ĐÀI ...
+url = https://quangminhhung.com/tin-tuc/cay-chong-chat-luong-cao-nhap-khau-tu-dai-loan-12.html
 
