--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-31 17:23:51
+lastsearch = 2024-07-31 19:59:21
 
 [everonvn.com.vn]
 match = -55.6%%
@@ -12,9 +12,9 @@ title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
 url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl
 
 [www.lazada.vn]
-match = -155.6%%
-title = 【Ready】⚡ Vỏ gối nằm 💖45x65💖 vỏ gối bao gối cotton poly ...
-url = https://www.lazada.vn/products/ready-vo-goi-nam-45x65-vo-goi-bao-goi-cotton-poly-don-gian-an-nhu-bedding-i2364912134.html
+match = -161.1%%
+title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -37,13 +37,13 @@ title = Vỏ gối kê xoa 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -100.0%%
-title = Vỏ gối EPCWAVE 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epcwave-45x65.html
+match = -111.1%%
+title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
 
 [shopee.vn]
-match = -116.7%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
