CI images update

--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-31 15:34:15
+lastsearch = 2024-07-31 20:27:00
 
 [shopee.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -7.1%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 21.4%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 28.6%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOooXm8ntlcPgb0wVZLJFCRESoMlSAqwLFh6JqJwj6GhbFAPhQTTl
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [noithattana.vn]
 match = 21.4%%
