--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-31 18:50:49
+lastsearch = 2024-07-31 20:21:45
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV52
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv52/
+title = Bộ ga chun LIVING - LV55
+url = https://hanvico.com.vn/san-pham/lv55/
 
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOorJVSKcSpJa6Nr3W5YTcnOQeV9T0qup7ZkRyDkTu-k4yVRHmUBS
 
 [lasantevn.com]
 match = -57.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+match = -42.9%%
+title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
+url = https://changagoidemsonghong.com/chan-ga-goi-bc29
 
 [songhong.info]
 match = -19.0%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoob_cOjWMg_jjmP7FhZUU9iY74e2Lz2EOht6lLzAuW_JQkoufsk
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+match = -33.3%%
+title = Bộ ga chun Velina V14 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOoqrkZMMU4YfiKeKXQfLgxMElnlPd-wLrL6DnWV7ECX0MYpU7_Hl
 
 [changmibedding.com]
 match = -33.3%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-ga-gối-cotton-đũi-phủ-bèo-bọc-chun-trần-
 [shop.chanrathanhthuy.com]
 match = 57.1%%
 title = Bộ Ga Bọc Lụa Tơ Tằm 14
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14?srsltid=AfmBOor-OS_VYAE7w09a2Bsi2_xABGUta-EtoOsfyaOjkeFwzi3oaIlk
 
 [chandrapsaigon.com]
 match = -71.4%%
