--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-31 14:25:14
+lastsearch = 2024-07-31 20:32:09
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = 16.0%%
@@ -47,9 +47,9 @@ title = Chương trình phát triển tên lửa của Đài Loan
 url = https://nghiencuuchienluoc.org/chuong-trinh-phat-trien-ten-lua-cua-dai-loan-la-chan-phong-thu-truoc-tham-vong-cua-trung-quoc/
 
 [books.google.com]
-match = -44.0%%
-title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=p30RRE6WJx&sig=ACfU3U2Cbu4rUax5Ik_fyBcvG9ykzX4zmA&hl=en&sa=X&ved=2ahUKEwj4uqLVi8iHAxXxAHkGHXx9B4kQ6AF6BAgYEAM
+match = -116.0%%
+title = Địa chí Bắc Giang: địa lý và kinh tế - Page 406 - Google Books Result
+url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA406&lpg=PA406&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD-w9X0tF&sig=ACfU3U2q0XKWziJ14JEZm1Qx0Pc78hSbPA&hl=en&sa=X&ved=2ahUKEwj9so_4sdGHAxUgCTQIHdEiDZ0Q6AF6BAgYEAM
 
 [cellphones.com.vn]
 match = -52.0%%
