--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-31 12:50:59
+lastsearch = 2024-07-31 20:31:48
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -176.9%%
-title = Alicia Chun - Atlanta, Georgia, United States
-url = https://www.linkedin.com/in/alicia-chun-3a385315a
+match = -200.0%%
+title = Justin Chun - Irvine, California, United States
+url = https://www.linkedin.com/in/justin-chun-b9aa732b3
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -7.7%%
-title = Catriona Jamieson
-url = https://profiles.ucsd.edu/catriona.jamieson
+match = -76.9%%
+title = Mingxiong Huang - UCSD Profiles
+url = https://profiles.ucsd.edu/mingxiong.huang
 
 [www.mtech.edu]
 match = -61.5%%
