--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-31 19:00:57
+lastsearch = 2024-07-31 20:36:06
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -176.5%%
-title = What can I do when a Homeowner's Association pops up in ...
-url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -520,4 +520,9 @@ url = https://www.news-journalonline.com/story/news/2024/07/03/new-florida-law-h
 match = -164.7%%
 title = Office of the Commissioner of Insurance and Safety Fire
 url = https://oci.georgia.gov/
+
+[www.legis.iowa.gov]
+match = -6.7%%
+title = House File 2442
+url = https://www.legis.iowa.gov/DOCS/GA/79GA/Legislation/HF/02400/HF02442/Current.html
 
